--- a/web/src/index.css
+++ b/web/src/index.css
@@ -14,10 +14,10 @@ body {
 
 @layer components {
   .btn-primary {
-    @apply px-6 py-3 text-base text-white font-bold flex justify-center items-center bg-primary-400 rounded-xl hover:bg-primary-700;
+    @apply px-6 py-3 text-base text-white font-bold flex justify-center items-center bg-primary-400 rounded-xl hover:bg-primary-700 transition-colors duration-300;
   }
 
   .btn-secondary {
-    @apply px-6 py-3 text-base text-primary-400 font-bold flex justify-center items-center bg-primary-100 rounded-xl hover:text-primary-700;
+    @apply px-6 py-3 text-base text-primary-400 font-bold flex justify-center items-center bg-primary-100 rounded-xl hover:text-primary-700 transition-colors duration-300;
   }
 }
