refactor rooms view on about page and go to rooms button

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,7 +19,7 @@ body {
   }
 
   .btn-secondary {
-    @apply px-6 py-3 text-base text-primary-400 font-bold flex justify-center items-center bg-primary-100 rounded-xl hover:text-primary-700 transition-colors duration-300;
+    @apply px-6 py-3 text-base text-primary-400 font-bold flex justify-center items-center bg-primary-400/10 rounded-xl hover:text-primary-700 transition-colors duration-300 hover:bg-primary-400/5;
   }
 }
 
